--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PDF Reader - Kotlin</string>
+    <string name="app_name">PDF Reader</string>
 
     <string name="all_files">All files</string>
     <string name="tools">Tools</string>
