--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="_00_0kb">00.0kb</string>
     <string name="image_to_pdf">Image to PDF</string>
     <string name="edit_pdf">Edit PDF</string>
+    <string name="important_box">important box</string>
 </resources>
